--- a/style.css
+++ b/style.css
@@ -45,7 +45,9 @@ h1 {
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
-#poradi {
+
+/*# */
+.poradi {
 	margin: 0 0 20px 0;
 	font-family: 'Bangers', cursive;
 	font-size: 24px;
@@ -53,12 +55,14 @@ h1 {
 	color: var(--cervena);
 }
 
-#otazka {
+/*# */
+.otazka {
 	margin: 20px 0 30px 0;
 	font-size: 36px;
 	line-height: 1.2;
 	text-align: center;
 	color: black;
+	font-family: 'Bangers', cursive;
 }
 
 .obsah {
@@ -71,7 +75,8 @@ h1 {
 	margin-right: 30px;
 }
 
-#obrazek {
+/*# */
+.obrazek {
 	padding: 5px;
 	width: 100%;
 	height: auto;
@@ -79,18 +84,21 @@ h1 {
 	border: 3px dotted var(--cervena);
 }
 
-#moznosti {
+/*# */
+.moznosti {
 	flex: 1;
 }
 
-#odpovedi {
+/*# */
+.odpovedi {
 	margin: 0;
 	padding: 0;
 	font-size: 24px;
 	list-style: none;
 }
 
-#odpovedi li {
+/*# */
+.odpovedi li {
 	margin: 0 0 20px 0;
 	padding: 10px 30px;
 	background-color: var(--seda);
@@ -99,13 +107,31 @@ h1 {
 	transform: translateX(0);
 }
 
-#odpovedi li:hover {
+/*# */
+.odpovedi li:hover {
 	background-color: var(--cervena);
 	color: white;
 	cursor: pointer;
 	transform: translateX(-10px);
 }
 
+
+.tvojeHodnoceni {
+	margin: 0 0 20px 0;
+	font-family: 'Bangers', cursive;
+	font-size: 38px;
+	text-align: left;
+	color: var(--cervena);
+}
+
+.vypisOtazka {
+	margin: 20px 0 30px 0;
+	font-family: 'Bangers', cursive;
+	font-size: 24px;
+	line-height: 1.2;
+	text-align: left;
+	color: black;
+}
 
 .vysledek {
 	display: none;
